--- a/product.html
+++ b/product.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
@@ -44,7 +44,7 @@ and open the template in the editor.
         </div>
         <br><br><br>
         <div class="container">
-            <div class="col-xs-4">
+            <div class="col-lg-4 col-xs-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">
@@ -61,7 +61,7 @@ and open the template in the editor.
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">
-                            AF Coating 图片介绍（右图所示）
+                            AF Coating 图片介绍（如图所示）
                         </h3>
                     </div>
                     <div class="panel-body h5">
@@ -69,7 +69,7 @@ and open the template in the editor.
                     </div>
                 </div>  
             </div>
-            <div class="col-xs-8">
+            <div class="col-lg-8 col-xs-12">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
