修改页面和添加图片

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@ and open the template in the editor.
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                公司规模
+                                公司简介
                             </a>
                         </h4>
                     </div>
