--- a/connect.html
+++ b/connect.html
@@ -68,9 +68,10 @@ and open the template in the editor.
                         </div>
                     </div>
                     <div class="panel-body">
-                        联系人：彭磊<br> 手机：13534059649 <br>
-                        电话：0755-335234 <br>  邮箱：pengl_zc@163.com <br>
-                        地址：广东省深圳市宝安区沙井镇环镇路辛养工业区20栋 
+                        联系人：施行辉<br> 
+                        手机：13425151667<br>
+                        电话：0755-61961089<br>  邮箱：shix_zc@163.com<br>
+                        地址：广东省深圳市宝安区松岗街道沙浦一路55号B栋三楼
                     </div>
                 </div>
 
