--- a/product.html
+++ b/product.html
@@ -62,13 +62,15 @@ and open the template in the editor.
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">
-                            AF Coating 图片介绍（如图所示）
+                            Anti-Glare 介绍
                         </h3>
                     </div>
                     <div class="panel-body h5">
-                        <p>介绍了 AF Coating 的原理、应用、生产过程以及测试相关设备和性能测试报告。</p>
+                        <p>AG玻璃，又叫防眩光玻璃，英文名为Anti-glare glass，是对玻璃表面进行特殊加工的一种玻璃。其特点是使原玻璃反光表面变为哑光无反射表面。其原理是把优质玻璃片的双面或单面经过特殊加工处理。使其与普通玻璃相比较具有较低的反射比，光的反射率由10%以上降低到1%以下，用技术创造出清晰透明的视觉效果，让观赏者能体验到更佳的感官视觉。 防划伤性能更强，铅笔硬度达到9H以上。结合视频成像屏幕可以构成透明防眩光、防反射屏幕，解决电子视屏、影像屏幕在环境光源下产生反光、眩光问题，提高图象画面质量。此一效果在 大视角下不变。 防眩玻璃，可以降低环境光的干扰，提高显示画面的可视角度和亮度，减少屏幕反光，让图象更清晰、色彩更艳丽、颜色更饱和，从而显著改善显示效果。
+                        </p>
                     </div>
                 </div>  
+                
             </div>
             <div class="col-lg-8 col-xs-12">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -108,6 +110,12 @@ and open the template in the editor.
                             </div>
                         </div>
                         <div class="item">
+                            <img src="img/pro/06.png" alt="...">
+                            <div class="carousel-caption">
+                                ...
+                            </div>
+                        </div>
+                        <div class="item">
                             <img src="img/pro/05.jpg" alt="...">
                             <div class="carousel-caption">
                                 ...
@@ -125,6 +133,21 @@ and open the template in the editor.
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
+            </div>
+            <div class="col-xs-12">
+            <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            为什么我们需要采用AG/AF/AS工艺？
+                        </h3>
+                    </div>
+                    <div class="panel-body h5">
+                        <p>因为我们平均每天有6-10小时在跟手机亲密接触，手上的汗、油、灰尘一不小心就会粘在手机表面，然而手机玻璃表面本身只是一个镜面，当汗、油、灰尘一不小心粘上，就会让他们牢牢在停留在玻璃表面，清洗比较的麻烦，这也是我们经常买手机回来贴保护膜来保掮自己爱机的原因。随着AF/AS工艺的推出，再也不用担心这个问题了，只需要轻轻一擦就可以彻底的解决了。</p>
+                        <p>
+                        当我们在外面打电话、刷微信、微博、新闻应太阳光的强烈照射导致内容看不清晰，然而时间久了导致眼睛疲劳。这是因为屏本身带有各种色采光，以及太阳的强烈照射导致光的折射看不清晰。夜晚开车的朋友也会经常遇到强光照射，而突发各种事故。这也是我们需要开发AG防眩光的本质意义。
+                        </p>
+                    </div>
+                </div>  
             </div>
         </div>
         <hr>
